k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: move-tech-orders-api-ingress
  namespace: move-tech-api
spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: move-tech-orders-api-service
                port:
                  number: 80
